Corrected spacing

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ header {
     flex-direction: column;
     align-items: center;
     margin-top: 30px;
-    gap: 50px;
+    gap: 20px;
     padding: 20px;
     h1 {
         font-size: 3rem;
